Refactoring: api
